--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -77,7 +77,7 @@
   display: block;
   padding: 0.6rem 1.25rem;
   text-decoration: none;
-  color: $color-text-secondary;
+  color: $color-text-primary;
   font-family: $font-body;
   font-size: 0.75rem;
   font-weight: 400;
@@ -96,11 +96,17 @@
   }
 
   &:hover {
-    color: $color-text-primary;
+    color: $color-text-secondary;
   }
 
   &.active {
     color: $color-bg;
+    font-weight: 600;
+
+    @include mobile {
+      color: $color-bg;
+      font-weight: 700;
+    }
   }
 }
 
